css/main.css
body.Bee_Body_MeTherapy
{
    color:       #000000;
    font-size:   12px;
    font-weight: normal;
    font-family: Chalkduster, Arial, Helvetica, Clean, sans-serif;
    background-image: url("../images/Background_MeTherapy.jpg");
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-repeat: no-repeat;
}

p.Bee_Copyright_MeTherapy
{
    position: absolute;
    left: 350px;
    top: 590px;
    color: #FFFFFF;
}

p.Bee_Title_MeTherapy
{
    position: absolute;
    left: 400px;
    top: 300px;
    color: #F488CA;
    font-size: 128px;
    font-weight: bold;
}

img[src='']
{
    display: none;
}

img.Bee_Title_MeTherapy
{
    position: absolute;
    width: 550px;
    left: 400px;
    top: 450px;
}

img.Bee_Logo_MeTherapy
{
    position: absolute;
    width: 100px;
    left: 280px;
    top: 375px;
    z-index: -1;
}

img.Bee_Foto_MeTherapy
{
    position: absolute;
    width: 250px;
    left: 700px;
    top: 10px;
    z-index: -1;
}

img.Bee_Contact_MeTherapy
{
    position: absolute;
    width: 200px;
    left: 40px;
    top: 550px;
    z-index: -1;
}

img.Bee_Menu_Left_MeTherapy_Border
{
    position: absolute;
    width: 620px;
    left: 0px;
    top: -18px;
    z-index: -1;
    transition: all .2s ease-in-out;
}

img.Bee_Menu_Left_MeTherapy
{
    position: absolute;
    width: 600px;
    left: 0px;
    top: 0px;
    z-index: -1;
    transition: all .2s ease-in-out;
}

img.Bee_Menu_Background
{
    position: absolute;
    width: 600px;
    left: 0px;
    top: 0px;
    z-index: 1;
    transition: all .2s ease-in-out;
}

a.Bee_Button
{
    position: absolute;
    display: inline-block;
    text-decoration: none;
    color: #EEDEE5;
    font-weight: bold;
    transition: all .2s ease-in-out;
    height: 24px;
}

a.Bee_Button:hover
{
    transform: scale(1.1);
}

a.Bee_Button:active
{
    color: #FFFFFF;
}

a.Bee_Button img
{
    height:24px;
}

a.Bee_Button.MeTherapy_1
{
    left: 135px;
    top: 30px;
    z-index: 1;
}

a.Bee_Button.MeTherapy_2
{
    left: 135px;
    top: 88px;
    z-index: 2;
}

a.Bee_Button.MeTherapy_3
{
    left: 135px;
    top: 146px;
    z-index: 3;
}

a.Bee_Button.MeTherapy_4
{
    left: 135px;
    top: 204px;
    z-index: 4;
}

a.Bee_Button.MeTherapy_5
{
    left: 135px;
    top: 262px;
    z-index: 5;
}

p.Bee_Menutext_MeTherapy
{
    position: absolute;
    left: 240px;
    top: 105px;
    width: 300px;
    z-index: 2;
    font-weight: bold;
}

@media only screen and (min-device-width : 375px) and (max-device-width : 667px)
{
    body.Bee_Body_MeTherapy
    {
        font-size:   10px;
    }
}

